--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "chinatgpt",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "homepage": "https://ryannkim327.github.io/Chinatgpt",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
